# binance-downloader

./: Cargo.toml  TESTING.md
data/: Binance Data Collection.html  Binance Data Collection.names  data.txt
src/: file_info.rs  main.rs  paths.rs  pipeline.rs  processor.rs  processor_unit.rs  scraper.rs  stages.rs
