[package]
name = "binance-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-curl = "0.5.1"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam = "0.8.4"
curl-http-client = "2.5.2"
dirs = "6.0.0"
http = "1.4.0"
lazy_static = "1.5.0"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
regex = "1.12.3"
reqwest = "0.13.2"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["rt", "macros", "rt-multi-thread", "parking_lot", "fs", "io-std", "io-util"] }
url = "2.5.8"
